test/types/cptr/cross_type_init.good
cross_type_init.chpl:4: error: invalid initialization of 'c_ptr(uint(64))' from 'c_ptr(int(64))'
